set up for materialize and create carousel

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,13 @@
  *= require_tree .
  *= require_self
  */
+@import "materialize-css/dist/css/materialize";
+
+/** Home-index **/
+.carousel {
+  height: 100vh;
+  .carousel-fixed-item {
+    bottom: 0;
+    top: 80px;
+  }
+}
