--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<div class="carousel carousel-slider">
+  <div class="carousel-fixed-item">
+    <div class="container">
+      <h1 class="white-text">天気をみんなに伝えよう</h1>
+    </div>
+  </div>
+  <%= image_tag 'top-main1.jpg', class: 'carousel-item' %>
+  <%= image_tag 'top-main2.jpg', class: 'carousel-item' %>
+  <%= image_tag 'top-main3.jpg', class: 'carousel-item' %>
+</div>
