--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,14 @@
-<div class="carousel carousel-slider">
+<div class="carousel carousel-slider" style="height: 100vh">
   <div class="carousel-fixed-item">
     <div class="container">
-      <h1 class="white-text">天気をみんなに伝えよう</h1>
+      <h3 class="white-text sub-carousel-title">We Share Reporters</h3>
+      <h1 class="white-text main-carousel-title">天気をみんなに伝えよう</h1>
     </div>
   </div>
   <%= image_tag 'top-main1.jpg', class: 'carousel-item' %>
   <%= image_tag 'top-main2.jpg', class: 'carousel-item' %>
   <%= image_tag 'top-main3.jpg', class: 'carousel-item' %>
+</div>
+<div class="container" id="top-page-about">
+  <h1 class="top-main-title">About</h1>
 </div>
