--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <%= render 'layouts/head' %>
-
   <body>
+    <%= render 'layouts/header' %>
     <%= yield %>
   </body>
   <%= javascript_pack_tag 'application' %>
