--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,11 +15,67 @@
  */
 @import "materialize-css/dist/css/materialize";
 
+html {
+  font-family: 'Lato', 'Noto Sans JP', 'ヒラギノ角ゴ ProN', 'Hiragino Kaku Gothic ProN', 'メイリオ', Meiryo, 'ＭＳ Ｐゴシック', 'MS PGothic', sans-serif;
+}
+body {
+  background:
+    linear-gradient(135deg, #f7f7f4 25%, transparent 25%) -45px 0,
+    linear-gradient(225deg, #f7f7f4 25%, transparent 25%) -45px 0,
+    linear-gradient(315deg, #f7f7f4 25%, transparent 25%),
+    linear-gradient(45deg, #f7f7f4 25%, transparent 25%);
+  background-size: 2em 2em;
+  background-color: #f5f5f3;;
+}
+
+/** Header **/
+header {
+  min-height: 90px;
+  background-color: white;
+  #header-logo {
+    float: left;
+    padding-top: 10px;
+    margin-left: 15px;
+  }
+  #header-main {
+    float: right;
+    margin-right: 20px;
+    i {
+      margin-top: 17px;
+      cursor: pointer;
+    }
+  }
+}
+.sidenav li a {
+  font-size: 17px;
+}
+.sidenav li > a > i, .sidenav li > a > [class^="mdi-"], .sidenav li > a li > a > [class*="mdi-"], .sidenav li > a > i.material-icons {
+  margin: 0 10px 0 0;
+}
+#sidebar-close {
+  text-align: right;
+  .sidenav-close {
+    cursor: pointer;
+    font-size: 75px;
+    margin: 15px;
+  }
+}
 /** Home-index **/
 .carousel {
   height: 100vh;
   .carousel-fixed-item {
     bottom: 0;
     top: 80px;
+    .sub-carousel-title {
+      font-family: 'Amatic SC', cursive;
+    }
+  }
+}
+#top-page-about {
+  height: 100vh;
+  margin-top: 150px;
+  .top-main-title {
+    font-weight: bold;
+    font-size: 5.2rem;
   }
 }
