--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,10 @@
   <body>
     <%= render 'layouts/header' %>
     <%= yield %>
+    <%= render 'layouts/footer' %>
+    <span id="top-icon">
+      <%= image_tag 'top_arrow.png', height: '50' %>
+    </span>
   </body>
   <%= javascript_pack_tag 'application' %>
 </html>
