--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,10 +1,16 @@
 <footer>
   <div class="container footer-links">
     <ul class="row" id="main-links">
-      <li class="col s12 m12 l2"><p>Home</p></li>
+      <li class="col s12 m12 l2">
+        <p><%= link_to "Home", root_path %></p>
+      </li>
       <li class="col s12 m12 l2"><p>About</p></li>
-      <li class="col s12 m12 l2"><p>新規登録</p></li>
-      <li class="col s12 m12 l2"><p>ログイン</p></li>
+      <li class="col s12 m12 l2">
+        <p><%= link_to "新規登録", new_user_registration_path %></p>
+      </li>
+      <li class="col s12 m12 l2">
+        <p><%= link_to "ログイン", new_user_session_path %></p>
+      </li>
       <li class="col s12 m12 l2"><p>ゲストログイン</p></li>
     </ul>
   </div>
