modify signup page for materialize

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,43 @@
-<h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+<div class="container">
+  <div class="row">
+    <h2>新規登録</h2>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), class: "col s12") do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
+
+      <div class="input-field col s12">
+        <i class="material-icons prefix">account_circle</i>
+        <%= f.email_field :username, autofocus: true, autocomplete: "username", class: "validate" %>
+        <%= f.label :username %>
+        <span class="helper-text">
+          半角英数字のみ
+        </span>
+      </div>
+
+      <div class="input-field col s12">
+        <i class="material-icons prefix">email</i>
+        <%= f.email_field :email, autocomplete: "email", class: "validate" %>
+        <%= f.label :email %>
+      </div>
+
+      <div class="input-field col s12">
+        <i class="material-icons prefix">lock</i>
+        <%= f.password_field :password, class: "validate" %>
+        <%= f.label :password %>
+        <span class="helper-text">
+          <% if @minimum_password_length %>
+            <em>(最低 <%= @minimum_password_length %> 文字まで)</em>
+          <% end %>
+        </span>
+      </div>
+
+      <div class="input-field col s12">
+        <i class="material-icons prefix">lock</i>
+        <%= f.password_field :password_confirmation, class: "validate" %>
+        <%= f.label :password_confirmation %>
+      </div>
+      <%= f.submit "登録する", class: "btn waves-effect waves-light blue lighten-1" %>
+    <% end %>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
