--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,6 +29,35 @@ body {
   background-size: 2em 2em;
   background-color: #f5f5f3;;
 }
+@media screen and (max-width: 1024px) {
+/* 1024pxまでの幅の場合に適応 */
+  #main-wrap {
+    padding-bottom: 340px;
+  }
+}
+@media screen and (max-width: 768px) {
+/* 768pxまでの幅の場合に適応 */
+  #main-wrap {
+    padding-bottom: 350px;
+  }
+}
+@media screen and (max-width: 480px) {
+/* 480pxまでの幅の場合に適応 */
+  #main-wrap {
+    padding-bottom: 350px;
+  }
+}
+@media screen and (max-width: 320px) {
+/* 320pxまでの幅の場合に適応 */
+  #main-wrap {
+    padding-bottom: 370px;
+  }
+}
+
+/** button **/
+.btn input[type="submit" i] {
+  color: white;
+}
 
 /** Header **/
 header {
