--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -59,6 +59,13 @@ body {
   color: white;
 }
 
+/** Checkbox **/
+#form-checkbox {
+  padding: 0 1.1rem;
+  margin: 10px 0;
+  display: inline-block;
+}
+
 /** Header **/
 header {
   min-height: 90px;
