--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,6 +29,9 @@ body {
   background-size: 2em 2em;
   background-color: #f5f5f3;;
 }
+#main-wrap {
+  min-height: 100vh;
+}
 @media screen and (max-width: 1024px) {
 /* 1024pxまでの幅の場合に適応 */
   #main-wrap {
@@ -100,8 +103,6 @@ header {
 }
 /** Footer **/
 footer {
-  position: absolute;
-  bottom: 0;
   width: 100%;
   min-height: 100px;
   background-color: rgba(214, 219, 223, 0.5);
@@ -111,6 +112,20 @@ footer {
       width: 100%;
       text-align: center;
     }
+  }
+}
+/** form **/
+.field_with_errors {
+  margin-left: 3rem;
+  input:not([type]),
+  input[type=text]:not(.browser-default), input[type=password]:not(.browser-default),
+  input[type=email]:not(.browser-default), input[type=url]:not(.browser-default),
+  input[type=time]:not(.browser-default), input[type=date]:not(.browser-default),
+  input[type=datetime]:not(.browser-default), input[type=datetime-local]:not(.browser-default),
+  input[type=tel]:not(.browser-default), input[type=number]:not(.browser-default),
+  input[type=search]:not(.browser-default),
+  textarea.materialize-textarea {
+    border-bottom: 1px solid #ef5350;
   }
 }
 /** icon to the top **/
