add logout link

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,13 +5,15 @@
         <p><%= link_to "Home", root_path %></p>
       </li>
       <li class="col s12 m12 l2"><p>About</p></li>
-      <li class="col s12 m12 l2">
-        <p><%= link_to "新規登録", new_user_registration_path %></p>
-      </li>
-      <li class="col s12 m12 l2">
-        <p><%= link_to "ログイン", new_user_session_path %></p>
-      </li>
-      <li class="col s12 m12 l2"><p>ゲストログイン</p></li>
+      <% unless user_signed_in? %>
+        <li class="col s12 m12 l2">
+          <p><%= link_to "新規登録", new_user_registration_path %></p>
+        </li>
+        <li class="col s12 m12 l2">
+          <p><%= link_to "ログイン", new_user_session_path %></p>
+        </li>
+        <li class="col s12 m12 l2"><p>ゲストログイン</p></li>
+      <% end %>
     </ul>
   </div>
 </footer>
