--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,7 +9,7 @@
 
       <div class="input-field col s12 l6">
         <i class="material-icons prefix">account_circle</i>
-        <%= f.email_field :username, autofocus: true, autocomplete: "username", class: "validate" %>
+        <%= f.text_field :username, autofocus: true, autocomplete: "username", class: "validate" %>
         <%= f.label :username %>
         <span class="helper-text">
           半角英数字のみ
@@ -33,12 +33,12 @@
 
       <div class="input-field col s12 m6">
         <i class="material-icons prefix">public</i>
-        <%= f.text_field :prefecture_code, placeholder: "都道府県", autocomplete: "prefecture_code", class: "validate p-region", disabled: true %>
+        <%= f.text_field :prefecture_code, placeholder: "都道府県", autocomplete: "prefecture_code", class: "validate p-region" %>
       </div>
 
       <div class="input-field col s12 m6">
         <i class="material-icons prefix">place</i>
-        <%= f.text_field :city, placeholder: "市区町村", autocomplete: "city", class: "validate p-locality", disabled: true %>
+        <%= f.text_field :city, placeholder: "市区町村", autocomplete: "city", class: "validate p-locality" %>
       </div>
 
       <div class="input-field col s12">
