--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -6,11 +6,17 @@
   <li><a class="waves-effect" href="#">About</a></li>
   <li><div class="divider"></div></li>
   <li><a class="subheader"><i class="material-icons">people</i>ユーザー向け</a></li>
-  <li>
-    <%= link_to "新規登録", new_user_registration_path, class: "waves-effect" %>
-  </li>
-  <li>
-    <%= link_to "ログイン", new_user_session_path, class: "waves-effect" %>
-  </li>
-  <li><a class="waves-effect" href="#">ゲストログイン(閲覧用)</a></li>
+  <% if user_signed_in? %>
+    <li>
+      <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, data: { confirm: 'ログアウトしますか?' }, class: "waves-effect" %>
+    </li>
+  <% else %>
+    <li>
+      <%= link_to "新規登録", new_user_registration_path, class: "waves-effect" %>
+    </li>
+    <li>
+      <%= link_to "ログイン", new_user_session_path, class: "waves-effect" %>
+    </li>
+    <li><a class="waves-effect" href="#">ゲストログイン(閲覧用)</a></li>
+  <% end %>
 </ul>
