--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -69,6 +69,37 @@ body {
   display: inline-block;
 }
 
+/** Flash **/
+.flash {
+  margin-bottom: 0;
+  width: 100%;
+  height: 58px;
+  color: white;
+  text-align: center;
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  p {
+    margin: 0;
+    font-size: 18px;
+    font-weight: bold;
+    padding-top: 16px;
+  }
+  .close-zone {
+    padding: 0;
+    i {
+      float: right;
+      border-left: solid 1.5px white;
+      cursor: pointer;
+    }
+  }
+}
+.notice {
+  background-color: #79b7f0;
+}
+.alert {
+  background-color: #ff510a;
+}
 /** Header **/
 header {
   min-height: 90px;
