--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,2 +1,30 @@
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+<% if flash[:notice] %>
+  <div class='flash notice row'>
+    <div class="col s10">
+      <p><%= notice %></p>
+    </div>
+    <div class="close-zone col s2">
+      <i class="medium material-icons">close</i>
+    </div>
+  </div>
+<% end %>
+
+<!-- <div class='flash alert row'>
+  <div class="col s10">
+    <p>ログインに失敗しました。</p>
+  </div>
+  <div class="close-zone col s2">
+    <i class="medium material-icons">close</i>
+  </div>
+</div> -->
+
+<% if flash[:alert] %>
+  <div class='flash alert row'>
+    <div class="col s10">
+      <p><%= alert %></p>
+    </div>
+    <div class="close-zone col s2">
+      <i class="medium material-icons">close</i>
+    </div>
+  </div>
+<% end %>
