--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -4,7 +4,7 @@
       <p><%= notice %></p>
     </div>
     <div class="close-zone col s2">
-      <i class="medium material-icons">close</i>
+      <i class="medium material-icons flash-cls-icon">close</i>
     </div>
   </div>
 <% end %>
@@ -24,7 +24,7 @@
       <p><%= alert %></p>
     </div>
     <div class="close-zone col s2">
-      <i class="medium material-icons">close</i>
+      <i class="medium material-icons flash-cls-icon">close</i>
     </div>
   </div>
 <% end %>
