edit error msg field in signup form

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -89,7 +89,6 @@ body {
     padding: 0;
     i {
       float: right;
-      border-left: solid 1.5px white;
       cursor: pointer;
     }
   }
@@ -143,6 +142,17 @@ footer {
       width: 100%;
       text-align: center;
     }
+  }
+}
+/** Error msg in form **/
+#error_explanation {
+  background-color: rgba(222,64,0,0.8);
+  color: white;
+  padding: 12px;
+  border-radius: 20px;
+  h2 {
+    font-size: 1.56rem;
+    margin: 0;
   }
 }
 /** form **/
